[package]
name = "base"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
deno.workspace = true
deno_core.workspace = true
deno_resolver.workspace = true
sys_traits.workspace = true

deno_cache.workspace = true
deno_canvas.workspace = true
deno_image.workspace = true
deno_node_crypto.workspace = true
deno_node_sqlite.workspace = true
deno_process.workspace = true
deno_webgpu.workspace = true

base_mem_check.workspace = true
base_rt.workspace = true
cpu_timer.workspace = true
deno_facade.workspace = true
fs.workspace = true

ext_env.workspace = true
ext_event_worker.workspace = true
ext_node.workspace = true
ext_os.workspace = true
ext_runtime.workspace = true
ext_workers.workspace = true

anyhow.workspace = true
bytes.workspace = true
ctor.workspace = true
either.workspace = true
enum-as-inner.workspace = true
fastwebsockets.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["server-graceful"] }
libc.workspace = true
log.workspace = true
num-traits.workspace = true
once_cell.workspace = true
pin-project.workspace = true
regex.workspace = true
scopeguard.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "tracing-log"] }
url.workspace = true
uuid.workspace = true

arc-swap = "1.7"
async-scoped = { version = "0.9", features = ["use-tokio"] }
cooked-waker = "5"
flume = "0.11.0"
strum = { version = "0.25", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }

[dev-dependencies]
eszip.workspace = true
eszip_trait.workspace = true
reqwest.workspace = true
rustls.workspace = true
serial_test.workspace = true
tempfile.workspace = true
tokio-util = { workspace = true, features = ["rt", "compat"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "tracing-log"] }

diff = "0.1"

[build-dependencies]
deno.workspace = true
deno_core.workspace = true
deno_error.workspace = true

deno_cache.workspace = true
deno_image.workspace = true
deno_canvas.workspace = true
deno_node_crypto.workspace = true
deno_node_sqlite.workspace = true
deno_process.workspace = true
deno_webgpu.workspace = true

ext_env.workspace = true
ext_event_worker.workspace = true
ext_node.workspace = true
ext_os.workspace = true
ext_workers.workspace = true
ext_runtime.workspace = true

deno_facade.workspace = true

deno_webidl.workspace = true
deno_web.workspace = true
deno_fetch.workspace = true
deno_websocket.workspace = true
deno_crypto.workspace = true
deno_net.workspace = true
deno_tls.workspace = true
deno_http.workspace = true
deno_io.workspace = true
deno_fs.workspace = true
deno_telemetry.workspace = true
deno_resolver.workspace = true

url.workspace = true
sys_traits.workspace = true

[features]
default = []
tracing = ["dep:tracing-subscriber"]
termination-signal-ext = []
