[package]
name = "ext_ai"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_error.workspace = true

base_rt.workspace = true
ext_ai_v8_utilities.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
ctor.workspace = true
faster-hex.workspace = true
futures.workspace = true
futures-util = { workspace = true, features = ["io"] }
fxhash.workspace = true
log.workspace = true
once_cell.workspace = true
reqwest.workspace = true
scopeguard.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
tracing.workspace = true
tracing-subscriber.workspace = true
xxhash-rust = { workspace = true, features = ["std", "xxh3"] }

# ndarray's default pure-Rust `matrixmultiply` backend is used instead of a
# BLAS backend: the AI ext only uses ndarray for tiny embedding post-processing
# (pooling/normalization) — the actual inference runs through ONNX Runtime
# (`ort`). Dropping the `blas` feature removes the OpenBLAS system-lib link,
# which has no musl build in apt and broke the Alpine cross-compile.
convert_case = "0.6"
ndarray = { version = "0.16" }
rand = "0.8"
tokenizers = { version = ">=0.13.4", default-features = false, features = ["onig"] }

ort = { version = "=2.0.0-rc.9", default-features = false, features = ["ndarray", "half", "load-dynamic", "cuda"] }
ort-sys = "=2.0.0-rc.9"
