[package]
name = "ext_runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_error.workspace = true

deno_permissions.workspace = true
deno_tls.workspace = true

base_rt.workspace = true

anyhow.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
