[package]
name = "ext_workers"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno.workspace = true
deno_core.workspace = true
deno_error.workspace = true
deno_telemetry.workspace = true

deno_facade.workspace = true
fs.workspace = true

ext_event_worker.workspace = true

anyhow.workspace = true
enum-as-inner.workspace = true
once_cell.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
